test/loopFixedPoint2.slq

def main(){
	x:=0:ğ”¹;
	y:=0:ğ”¹;
	while(measure(H(0:ğ”¹))){
		x=H(dup(y)); // error
	}
	return x;
}
